updated landing page links

--- a/basic-website/my-webpage.html
+++ b/basic-website/my-webpage.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="introduction">
             <h1> Amanda Okuhle Fono</h1>
-            <img src="/images/new-table-mountain.jpg" alt="Amanda with table mountain">
+            <img src="./images/new-table-mountain.jpg" alt="Amanda with table mountain">
         </div>
 
         <div class="City-Paris">
@@ -22,7 +22,7 @@
 
             <div class="city">
 
-                <img class="image1" src="/images/paris image.png" alt="">
+                <img class="image1" src="./images/paris image.png" alt="">
                 <div>
                     <h2> Paris</h2>
                     <p>
@@ -80,7 +80,7 @@
                     <li>The church is virtually all timber-wooden organ, and a hugely
                         ornate wooden pulpit with a sculpture of two lions.</li>
                 </ul>
-                <img src="/images/Groot Kerk.jpg" class="right" alt="">
+                <img src="./images/Groot Kerk.jpg" class="right" alt="">
             </div>
 
             <div class="place">
@@ -97,7 +97,7 @@
                         being 10
                         foot 6 inch in diameter.</li>
                 </ul>
-                <img src="/images/City hall.jpg" class="image" alt="">
+                <img src="./images/City hall.jpg" class="image" alt="">
 
 
 
@@ -113,7 +113,7 @@
                     <li> When the governors relocated, the Castle continued to serve as the political center until
                         the Union of South Africa in 1910.</li>
                 </ul>
-                <img src="/images/Castle of Good Hope.jpg" class="image" alt="">
+                <img src="./images/Castle of Good Hope.jpg" class="image" alt="">
             </div>
         </div>
 
