updated landing page links

--- a/simplegrid-webpage/my-webpage-grid.html
+++ b/simplegrid-webpage/my-webpage-grid.html
@@ -79,7 +79,7 @@ td {
 
             <div class="col-6">
 
-                <img src="/images/new-table-mountain.jpg" alt="" class="intro">
+                <img src="./images/new-table-mountain.jpg" alt="" class="intro">
 
             </div>
             
