updated my webpage pictures

--- a/basic-website/my-webpage.html
+++ b/basic-website/my-webpage.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="introduction">
             <h1> Amanda Okuhle Fono</h1>
-            <img src="./images/new-table-mountain.jpg" alt="Amanda with table mountain">
+            <img src="images/new-table-mountain.jpg" alt="Amanda with table mountain">
         </div>
 
         <div class="City-Paris">
