updates my landing page

--- a/index.html
+++ b/index.html
@@ -11,20 +11,23 @@
 </head>
 
 <body>
+    <div class="page">
+    <h1>Welcome to my Basic Webpage.</h1>
+    
     <div class="homepage">
-        <div><img src="images/landing-image.jpg" alt=""></div>
-
-        <div class="home1">
-        <button>
+ 
+    <div class="home1">
+        <button class="left">
         <a href="./basic-website/my-webpage.html" class="text"> Webpage with plain css</a>
         </button>
-        <br>
-
+    </div>
+    <div class="home1">
         <button>
         <a href="./simplegrid-webpage/my-webpage-grid.html" class="text">Webpage with grid css</a>
         </button></div>
 
 
+    </div>
     </div>
 
 </body>
